create header & button

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -5,3 +5,7 @@ $primary-dark: #498294;
 $secondary: #d8aa65;
 $secondary-light: #e9c999;
 $secondary-dark: #b58d53;
+
+$grey: #f2f2f2;
+$line-gray: #c4c4c4;
+$text-gray: #646464;
