リストを作成

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,7 +1,7 @@
 html,
 body {
   font-size: 14px;
-  font-family: 'Montserrat', '游ゴシック体', YuGothic;
+  font-family: '游ゴシック体', YuGothic;
   color: #505050;
 }
 
