--- a/src/assets/styles/modules/SignIn.module.scss
+++ b/src/assets/styles/modules/SignIn.module.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 500px;
+  width: 400px;
   margin: 0 auto;
   padding-top: 40px;
 }
@@ -8,4 +8,16 @@
   margin-bottom: 40px;
   font-size: 18px;
   text-align: center;
+}
+
+.item {
+  margin-bottom: 16px;
+
+  &.button {
+    margin: 32px 0 8px;
+  }
+
+  &.textLink {
+    text-align: right;
+  }
 }
