新規登録画面作成

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -7,5 +7,6 @@ $secondary-light: #e9c999;
 $secondary-dark: #b58d53;
 
 $grey: #f2f2f2;
+$back-grey: #E7E7E7;
 $line-gray: #c4c4c4;
 $text-gray: #646464;
