--- a/src/assets/styles/modules/Signup.module.scss
+++ b/src/assets/styles/modules/Signup.module.scss
@@ -20,4 +20,13 @@
   &.textLink {
     text-align: right;
   }
+
+  .radioItem {
+    display: inline-block;
+    margin-right: 16px;
+
+    &:last-of-type {
+      margin-right: 0;
+    }
+  }
 }
