--- a/src/assets/styles/modules/PrimaryButton.module.scss
+++ b/src/assets/styles/modules/PrimaryButton.module.scss
@@ -17,4 +17,9 @@
   &:hover {
     background-color: $primary-dark;
   }
+
+  &:disabled {
+    background-color: $primary-disabled;
+    cursor: not-allowed;
+  }
 }
