itemにfirebaseの情報を表示

--- a/src/assets/styles/modules/Filter.module.scss
+++ b/src/assets/styles/modules/Filter.module.scss
@@ -43,7 +43,12 @@
   display: inline-block;
   height: 30px;
   width: 30px;
+  margin-right: 4px;
   color: $secondary;
+
+  &:last-of-type {
+    margin-right: 0;
+  }
 }
 
 .filterBox {
