--- a/src/assets/styles/modules/Header.module.scss
+++ b/src/assets/styles/modules/Header.module.scss
@@ -1,4 +1,5 @@
 @import '../_common.scss';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
 
 .header {
   height: 72px;
@@ -21,6 +22,7 @@
   font-size: 24px;
   padding-left: 24px;
   cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .menus {
