登録されていない場合の挙動を修正

--- a/src/assets/styles/modules/List.module.scss
+++ b/src/assets/styles/modules/List.module.scss
@@ -39,6 +39,14 @@
   &:hover {
     background-color: $grey;
   }
+
+  &.tableBlank {
+    cursor: default;
+
+    &:hover {
+      background-color: #fff;
+    }
+  }
 }
 
 .cell {
