textFiledにdisabledを設定できるように

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -10,4 +10,5 @@ $secondary-dark: #b58d53;
 $grey: #f2f2f2;
 $back-grey: #E7E7E7;
 $line-gray: #c4c4c4;
+$disabled-text-grey: #A7A7A7;
 $text-gray: #646464;
