--- a/src/assets/styles/modules/Header.module.scss
+++ b/src/assets/styles/modules/Header.module.scss
@@ -14,6 +14,7 @@
   left: 0;
   background-image: url('../../images/header.png');
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+  z-index: 100;
 }
 
 .title {
