--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -2,6 +2,7 @@ $primary: #5598ad;
 $primary-light: #d4e6ec;
 $primary-dark: #498294;
 $primary-disabled: #AEC8D0;
+$primary-line: #ADC8D0;
 
 $secondary: #d8aa65;
 $secondary-light: #e9c999;
