--- a/src/assets/styles/modules/Sidebar.module.scss
+++ b/src/assets/styles/modules/Sidebar.module.scss
@@ -1,11 +1,55 @@
 @import '../common';
 
-.sidebarBox {
+.sidebarWrap {
   position: fixed;
   top: 72px;
   right: 0;
   bottom: 0;
+  left: 0;
+  background-color: rgba(#000, 0);
+  transition: all 100ms ease-out;
+
+  &.isOpen {
+    background-color: rgba(#000, .6);
+  }
+}
+
+.sidebarBox {
+  position: fixed;
+  top: 72px;
+  right: -260px;
+  bottom: 0;
   left: auto;
-  width: 324px;
+  width: 260px;
   background-color: $primary;
+  transition: all 200ms ease-out;
+
+  &.isOpen {
+    right: 0;
+  }
+}
+
+.sidebarItem {
+  display: flex;
+  align-items: center;
+  padding: 24px;
+  border-bottom: 1px solid $primary-line;
+  color: #fff;
+  cursor: pointer;
+  transition: all 300ms;
+
+  &:hover {
+    background-color: $primary-dark;
+  }
+}
+
+.iconBox {
+  display: inline-block;
+  height: 21px;
+  width: 21px;
+  margin-right: 8px;
+}
+
+.textBox {
+  font-size: 16px
 }
