詳細の重要度を星に変更

--- a/src/assets/styles/modules/[id].module.scss
+++ b/src/assets/styles/modules/[id].module.scss
@@ -43,6 +43,10 @@
   flex-wrap: wrap;
   padding-bottom: 24px;
   line-height: 1.5;
+
+  &.bodyItemPriority {
+    align-items: center;
+  }
 }
 
 .bodyItemLabel {
