--- a/src/assets/styles/modules/FileUpload.module.scss
+++ b/src/assets/styles/modules/FileUpload.module.scss
@@ -10,7 +10,7 @@
   padding: 40px 0;
   position: relative;
   width: 100%;
-  background: $back-grey;
+  background: $back-grey-light;
   border: 1px dashed $line-gray;
 }
 
