カテゴリの位置を変更

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -8,6 +8,7 @@ $secondary: #d8aa65;
 $secondary-light: #e9c999;
 $secondary-dark: #b58d53;
 
+$black: #505050;
 $grey: #f2f2f2;
 $back-grey: #E7E7E7;
 $back-grey-light: #F8F8F8;
