--- a/src/assets/styles/modules/Filter.module.scss
+++ b/src/assets/styles/modules/Filter.module.scss
@@ -2,16 +2,51 @@
 
 .container {
   margin: 0;
+  padding: 24px;
   background-color: $grey;
+}
+
+.controller {
+  display: flex;
+  margin-bottom: 16px;
+  align-items: center;
+  width: 120px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 600;
+  transition: all 200ms ease;
+
+  &.isClose {
+    margin-bottom: 0;
+  }
+
+  .controllerIcon {
+    display: inline-block;
+    height: 24px;
+    margin-left: 8px;
+    font-size: 24px;
+  }
+}
+
+.contentBox {
+  height: 104px;
+  overflow: hidden;
+  transition: height 300ms ease;
+  &.isClose {
+    height: 0;
+  }
 }
 
 .content {
   display: flex;
   justify-content: flex-start;
-  margin: 0 auto;
-  padding: 24px;
+  margin: 0 auto 24px;
   width: 100%;
   max-width: 1200px;
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
 }
 
 .titleBox {
@@ -62,34 +97,16 @@
   align-items: center;
   justify-content: flex-start;
   margin-right: 24px;
-  width: 24%;
-
-  &:nth-child(1) {
-    width: 12%;
-  }
-
-  &:nth-child(2) {
-    width: 40%;
-  }
+  width: 50%;
 
   &:last-of-type {
     margin-right: 0;
   }
 }
 
-.filterImportant {
-  flex-direction: column;
-  align-items: flex-start;
-}
-
 .label {
   display: inline-block;
-  margin-bottom: 12px;
+  width: 80px;
   color: #646464;
   font-size: 12px;
-}
-
-.selectFiled,
-.textField {
-  width: 100%;
 }
