--- a/src/assets/styles/modules/Filter.module.scss
+++ b/src/assets/styles/modules/Filter.module.scss
@@ -40,7 +40,7 @@
 .content {
   display: flex;
   justify-content: flex-start;
-  margin: 0 auto 24px;
+  margin: 0 auto 20px;
   width: 100%;
   max-width: 1200px;
 
@@ -109,4 +109,18 @@
   width: 80px;
   color: #646464;
   font-size: 12px;
+}
+
+.starsFiled {
+  display: flex;
+  align-items: center;
+}
+
+.starsWrap {
+  pointer-events: none;
+  opacity: .5;
+}
+
+.priorityCheck {
+  margin-left: 16px;
 }
