カテゴリ追加時の文字数エラー、カテゴリが1つの時は削除できないように

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -15,3 +15,6 @@ $back-grey-light: #F8F8F8;
 $line-gray: #c4c4c4;
 $disabled-text-grey: #A7A7A7;
 $text-gray: #646464;
+
+$error: #C32E19;
+$error-light: #FDEDEB;
