--- a/src/assets/styles/modules/SelectBox.module.scss
+++ b/src/assets/styles/modules/SelectBox.module.scss
@@ -40,6 +40,7 @@
   height: 40px;
   width: 100%;
   padding: 0 16px;
+  background-color: #fff;
   border: 1px solid #c4c4c4;
   border-radius: 4px;
   cursor: pointer;
