--- a/src/assets/styles/modules/Filter.module.scss
+++ b/src/assets/styles/modules/Filter.module.scss
@@ -30,6 +30,13 @@
     margin-left: 8px;
     font-size: 24px;
   }
+
+  .filteringInfo {
+    display: inline-block;
+    margin-left: 16px;
+    font-size: 14px;
+    font-weight: normal;
+  }
 }
 
 .contentBox {
