--- a/src/assets/styles/modules/Profile.module.scss
+++ b/src/assets/styles/modules/Profile.module.scss
@@ -11,11 +11,37 @@
 
 .profileImage {
   display: inline-block;
+  height: 200px;
+  width: 100%;
+  margin-bottom: 24px;
   font-size: 200px;
+  overflow: hidden;
+  border-radius: 100px;
+}
+
+.addImage {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
 }
 
 .profileContent {
   width: calc(100% - 224px)
+}
+
+.uploadLabel {
+  padding: 12px 16px;
+  position: relative;
+  border-radius: 4px;
+  transition: all 300ms ease;
+
+  &:hover {
+    background-color: $grey;
+  }
+}
+
+.uploadInput {
+  display: none;
 }
 
 .title {
